Backend fix
Fixed backend response
Added and removed logical dtos
fixed frontend code to new backend response
made backend response tests

TODO:

Service tests